# prism-ml-infra

./: .gitignore  README.md  __init__.py  config.py  logger.py  main.py  pyproject.toml  requirements.txt
api/: __init__.py  routes.py
core/: __init__.py  inference.py  trainer.py
schemas/: __init__.py  payload.py
